--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,12 @@
 <!DOCTYPE html>
+<head>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+        }
+    </style>
+</head>
 <html>
     <body>
     </body>
